# file_explorer

./: .gitignore  README.md
doc/: SECURITY.md
file_explorer/: app.py  pyproject.toml
file_explorer/core/: config.py
file_explorer/core/server/: state.py
file_explorer/core/services/: mime_resolver.py
file_explorer/core/utils/: network.py  session.py
file_explorer/modules/auth/: routes.py  service.py
file_explorer/modules/files/: routes.py
file_explorer/modules/home/: routes.py
file_explorer/static/css/: style.css
file_explorer/templates/: files.html  index.html  indexhost.html
helix/: app.py  pyproject.toml
helix/api/: routes.py
helix/config/: loader.py  mime_map.json  server.json
helix/core/logging/: logger.py
helix/core/services/: file_manager.py  mime_resolver.py  path_utils.py
helix/modules/auth/: routes.py
helix/modules/files/: routes.py  service.py
helix/static/css/: login.css
helix/templates/: index.html  indexhost.html
word_counter/: main.py  pyproject.toml
word_counter/word_counter/: __init__.py  analyzer.py  file_reader.py  processor.py
