[tool.poetry]
name = "word-counter"
version = "0.1.0"
description = ""
authors = ["Hennan Lewis <39320310+hennanlewis@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
janome = "^0.5.0"
tqdm = "^4.67.1"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
